# PDF-extractext

./: main.py  pyproject.toml
src/core/: __init__.py  config.py  database.py  exceptions.py
src/models/: document.py
src/repositories/: document_repository.py
src/routes/: router.py
src/schemas/: __init__.py  base.py  document.py
src/services/: document_service.py
src/views/: __init__.py  document_view.py
